@@ -1,4 +1,5 @@
 ======================
+    ADDED: panel costum colors: new Current Marked Foreground
     ADDED: compare by content: the action is now smarter in finding the right files
     ADDED: profiles for the panels
     ADDED: mkdir (F7) can now create whole trees on the fly ("foo/bar/test")
